--- a/index.html
+++ b/index.html
@@ -24,49 +24,54 @@
         <div>95%</div>
     </section>
 
-    <section>
+    <section class="review">
         <h3>What our users say</h3>
         <div class="cards">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <br>
-            <h3>Loved by Designers</h3>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-            <br>
-            <img class="avatar" src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
-            <p>Reviewer name</p>
-            <p>Date</p>
-        </div>
-                <div class="cards">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <br>
-            <h3>Loved by Designers</h3>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-            <br>
-            <img class="avatar" src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
-            <p>Reviewer name</p>
-            <p>Date</p>
-        </div>
-                <div class="cards">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
-            <br>
-            <h3>Loved by Designers</h3>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-            <br>
-            <img class="avatar" src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
-            <p>Reviewer name</p>
-            <p>Date</p>
+            <div class="card">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <br>
+                <h4>Loved by designers</h4>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="reviewer">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <p>Reviewer name</p>
+                    <p>Date</p>
+                </div>
+            </div>
+                        <div class="card">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <br>
+                <h4>Loved by designers</h4>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="reviewer">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <p>Reviewer name</p>
+                    <p>Date</p>
+                </div>
+            </div>
+                        <div class="card">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="">
+                <br>
+                <h4>Loved by designers</h4>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="reviewer">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <p>Reviewer name</p>
+                    <p>Date</p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="ready">
