--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>LOGO</h1>
-        <button>Sign up</button>
+        <button class="btn">Sign up</button>
     </header>
 
     <section class="banner">
         <h2>Cool Dark UI Template for webflow Agencies!</h2>
-        <button>See it in Action</button>
+        <button class="btn">See it in Action</button>
         <img src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
     </section>
 
@@ -85,7 +85,7 @@
             <input type="text" name="" id="" placeholder="Name">
             <input type="email" name="" id="" placeholder="Email">
             <textarea name="" id="" placeholder="Message"></textarea>
-            <button type="submit">Submit</button>
+            <button class="btn" type="submit">Submit</button>
         </form>
     </section>
 
