--- a/index.html
+++ b/index.html
@@ -7,21 +7,32 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <header class="header">
+<section class="bg-image">
+            <header class="header">
         <h1>LOGO</h1>
         <button class="btn">Sign up</button>
     </header>
 
     <section class="banner">
         <h2>Cool Dark UI Template for webflow Agencies!</h2>
-        <button class="btn">See it in Action</button>
-        <img src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+        <button class="btn">Stay focused</button>
     </section>
 
-    <section class="numbers">
-        <div>50K</div>
-        <div>2M+</div>
-        <div>95%</div>
+    <section class="action">
+        <h3>See It in Action</h3>
+        <p>Explore the live preview and imagine your brand in this bold new look.</p>
+        <button class="btn">Launch Live Preview</button>
+        <img src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+    </section>
+</section>
+<section class="numbers">
+    <p>Joined Thousands of Productive Users</p>
+        <div class="number">50K</div>
+        <p>Active Users</p>
+        <div class="number">2M+</div>
+        <p>Focus Sessions</p>
+        <div class="number">95%</div>
+        <p>Satisfaction Rate</p>
     </section>
 
     <section class="review">
@@ -90,14 +101,14 @@
     </section>
 
     <footer>
-        <h2>LOGO</h2>
+        <h1 class="website-name">LOGO</h1>
         <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>How it works</li>
-            <li>Services</li>
-        </ul>
+        <nav class="footer-nav">
+            <a href="https://www.google.com">Home</a>
+            <a href="https://www.google.com">About</a>
+            <a href="https://www.google.com">How it works</a>
+            <a href="https://www.google.com">Services</a>
+        </nav>
     </footer>
 </body>
 </html>
